<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_label" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/group_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_label" />

            <Spinner
                android:id="@+id/group_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_label" />

    <EditText
        android:id="@+id/text_field"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="top|left" />

    <TextView
        android:id="@+id/annotation_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/annotation_label" />

    <EditText
        android:id="@+id/annotation_field"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="top|left" />

    <TextView
        android:id="@+id/documentation_link_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/documentation_link_text" />

    <EditText
        android:id="@+id/documentation_link_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/task_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_link_text" />

    <EditText
        android:id="@+id/task_link_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/merge_link_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/merge_request_link_text" />

    <EditText
        android:id="@+id/merge_link_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/version_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_label" />

            <Spinner
                android:id="@+id/change_version_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/private_change_checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/private_change" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_button_text" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button_text" />
    </LinearLayout>

</LinearLayout>