<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/product_order_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="4dp"
            android:text="№#"
            android:textAlignment="gravity"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/product_name_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="12"
            android:text="Name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_comited_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="right"
            android:paddingRight="4dp"
            android:text="Author"
            android:textAlignment="gravity"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/product_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/product_doc_rep_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="3"
            android:text="@string/product_dok_rep_text" />

        <TextView
            android:id="@+id/product_doc_rep_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <TextView
        android:id="@+id/product_avg_time_label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="3"
        android:text="@string/product_avg_time_text"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/product_lang_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_weight="3"
        android:text="@string/product_lang_text"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_button_text" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_button_text" />
    </LinearLayout>

</LinearLayout>